# LearnOpenglProject

./: CMakeLists.txt
opengl/glad/: glad.c
opengl/glad/include/glad/: glad.h
opengl/glfw/lib/: glfw3.lib
source/include/: MyShader.cpp  MyShader.h
source/src/1_helloworld/: CMakeLists.txt  helloworld.cpp
source/src/2_VBO/: CMakeLists.txt  VBO.cpp
source/src/2_hellorectangle/: CMakeLists.txt  helloworld.cpp
source/src/3_Uniform/: CMakeLists.txt  uniform.cpp
source/src/3_Uniform/shaders/: fshader.fs  vshader.vs
